--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   hello
   <script>
-    document.write("??");
-    alert("i see u");
+    document.write("??" + "<bar>");
+    document.write(5-44 + "<bar>");
   </script>
 </body>
