--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-
+<html>
   <head>
-  main
+    <style>
+      canvas {
+        width: 600;
+        height: 600;
+        background: black;
+    </style>
   </head>
 <body>
   hello
-  
+  <canvas></canvas>
 </body>
 <script>
     document.write("??" + "<bar>");
     document.write(5-44 + "<bar>");
- </script>
+</script>
+</html>
